--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "nest_concepts",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": {
+    "name": "Fernando Cavalcanti",
+    "email": "comododk@gmail.com"
+  },
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
